tests/baselines/reference/accessorWithInitializer.errors.txt
tests/cases/compiler/accessorWithInitializer.ts(2,9): error TS1052: A 'set' accessor parameter cannot have an initializer.
tests/cases/compiler/accessorWithInitializer.ts(3,16): error TS1052: A 'set' accessor parameter cannot have an initializer.


==== tests/cases/compiler/accessorWithInitializer.ts (2 errors) ====
    class C {
        set X(v = 0) { }
            ~
!!! error TS1052: A 'set' accessor parameter cannot have an initializer.
        static set X(v2 = 0) { }
                   ~
!!! error TS1052: A 'set' accessor parameter cannot have an initializer.
    }